# spout

./: .gitignore  CMakeLists.txt  build.sh
Common/: Util.h
Log/: CMakeLists.txt  Log.cpp  Log.h
Log/example/: CMakeLists.txt  example_LogEvent.cpp  example_LogFormatter.cpp  example_LogLevel.cpp  example_Logger.cpp  example_test.cpp
